@@ -6,6 +6,12 @@ See ChangeLog for full commit logs; this is summarized/major changes.
 
 pkgcore trunk:
 
+* Pkgcore no longer supports the old form cvs version component; for
+  example, diffball-cvs.1.0 (cvs version of 1.0 for diffball).  This has
+  long since been deprecated- basically since day 1 of cvs.  It's been
+  basically six years, no vdb usage should exist anymore, thus dropping
+  support for it.
+
 * Fixed test sporadic test failure- false positive code quality check.
   Gentoo bug 437216.
 
